--- a/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -10,8 +10,8 @@
             <input class="form-control"
                    placeholder="Nombre de la persona"
                    formControlName="name">
-            <span class="form-text text-danger">
-                   error message
+            <span *ngIf="isValidField('name')" class="form-text text-danger">
+                   {{ getFieldError('name') }}
             </span>
         </div>
     </div>
@@ -44,13 +44,14 @@
 
                 <div class="input-group">
                     <input [formControlName]="i" class="form-control">
+
                     <button class="btn btn-outline-danger"
                             type="button">
                       Eliminar
                   </button>
                 </div>
-                <span class="form-text text-danger">
-                   Este campo es requerido
+                <span *ngIf="isValidFieldInArray(favoriteGames, i)" class="form-text text-danger">
+                  Este campo es requerido
                 </span>
 
             </div>
